Enable Active Directory shortcut on the welcome screen

BUG=668459
TEST=manual

Review-Url: https://codereview.chromium.org/2577093002
Cr-Commit-Position: refs/heads/master@{#440110}