chrome/browser/ui/webui/chromeos/login/signin_screen_handler.cc
@@ -1217,7 +1217,6 @@ void SigninScreenHandler::HandleToggleEnrollmentAd() {
   chromeos::DBusThreadManager::Get()
       ->GetUpstartClient()
       ->StartAuthPolicyService();
-  HandleToggleEnrollmentScreen();
 }
 
 void SigninScreenHandler::HandleToggleEnableDebuggingScreen() {
